完成路由组件的搭建，对应p对应p6完成

--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
