--- a/app/package.json
+++ b/app/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "install": "^0.13.0",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
   },
