--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "install": "^0.13.0",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
